=============================================================
Version 3.4.6
=============================================================
 - Feature : Switch env from config prod/preprod
=============================================================
Version 3.4.5
=============================================================

 - Feature:  Toolbox file details
 - Feature:  Log import params initialized
 - Feature:  Anonymize customer address e-mail in config 
 - Bugfix:   Vat number sync update
 - Bugfix:   Order duplicate when delivery_address_id changes
 - Bugfix:   php8.1 address strings data not be null

=============================================================
Version 3.4.4
=============================================================

 - Bugfix: Fixed compatible versions to unlock module installation in Prestashop 8.0
 - Bugfix: Fixed Tools::jsonDecode() and Tools::jsonEncode() functions for json_decode() and json_encode
 - Bugfix: Fixed import of orders in Prestashop backoffice due to the error in LengowAddress.php
 - Bugfix: Fix import customer from order
 - Bugfix: Add ProductAttribute in LengowCart.php for compability for Prestashop 8 during import order in backoffice
 - Bugfix: Fix of the recording of the tracking_number when updating the status of an order on the backoffice side
 - Bugfix: Deprecated hooks update in LengowHook.php

=============================================================
Version 3.4.3
=============================================================

 - Bugfix: The display of the order list and export product catalog when mode debug of Prestashop is actived

=============================================================
Version 3.4.2
=============================================================

    - Feature: Integration of an internal toolbox with all Lengow information for support
    - Feature: Removal of compatibility with PrestaShop 1.5
    - Feature: Adding the PHP version in the toolbox