@@ -267,6 +267,10 @@ class LengowOrderController extends LengowController
                     'text' => $this->locale->t('order.screen.status_refunded'),
                 ],
                 [
+                    'id' => LengowOrder::STATE_PARTIALLY_REFUNDED,
+                    'text' => $this->locale->t('order.screen.status_partially_refunded'),
+                ],
+                [
                     'id' => LengowOrder::STATE_CLOSED,
                     'text' => $this->locale->t('order.screen.status_closed'),
                 ],
