@@ -5,16 +5,16 @@
 /lengow.php|52f84822c6ba2b4b248c3771d00aab1a
 /loader.php|7dde664eb6eb1c0a5e80043b86893be7
 /config/index.php|be8b25f88c14bddd7711e4585ebae316
-/translations/en.csv|57f65f5b53170eacad3d347b1ed0479c
-/translations/es.csv|9bff1e44c0fcc3aba75d8e668784b667
-/translations/fr.csv|48919ec5caf5c2234f982eb68a47449e
+/translations/en.csv|0fd50a4d076e69f10f1f5aa27ed75435
+/translations/es.csv|8fb3e80b1ed3a102b4e691e5c6c0236f
+/translations/fr.csv|b7d14ebe05fcb7280e8eff178f0d61a7
 /translations/index.php|be8b25f88c14bddd7711e4585ebae316
-/translations/it.csv|bf28cf31cc50f850b951fe722ccba47e
+/translations/it.csv|f55514d07f609247c5db05c4bed86a6d
 /classes/controllers/LengowHomeController.php|7cdeec9a73addc0eca5d252a3d09903f
 /classes/controllers/LengowOrderSettingController.php|08a24dcf42b325ba6ff18d453b3dd4d0
 /classes/controllers/LengowDashboardController.php|a134f00e4abaf5e00f648bb09c782342
-/classes/controllers/LengowMainSettingController.php|9e7b7dec8e43e50da816d34558705c6d
-/classes/controllers/LengowOrderController.php|56fd51331ed2df8b75f160e20ff60b9f
+/classes/controllers/LengowMainSettingController.php|e36b3eb18668acacb065cff36718ca44
+/classes/controllers/LengowOrderController.php|82a014ef6712e8d4a3344586a492f1c2
 /classes/controllers/LengowToolboxController.php|e2382d74806933d5d0dad76e754b6bee
 /classes/controllers/LengowLegalsController.php|3eae0a4123fbf968b31871dc20824932
 /classes/controllers/LengowController.php|165a7cc6ea8e14a5ddfbde693a395c94
@@ -47,7 +47,7 @@
 /classes/models/LengowMarketplace.php|e9984aeac81230d7fcc71da3293d882d
 /classes/models/LengowProduct.php|47c59ee4afc1f3620df3ecff4bbdc801
 /classes/models/LengowCart.php|82edee2c2bb769954b37b8dc18a9f6d2
-/classes/models/LengowMain.php|f80f6d9cb7cf58c5659f4ca6ad7a2cb6
+/classes/models/LengowMain.php|111614e8a875f5f8501b0647be5f9e3b
 /classes/models/LengowList.php|09c2c0ba4609fd530ab8b0246d46b4db
 /classes/models/LengowCatalog.php|fe184f26056d2f50787738b9aa883746
 /classes/models/LengowShop.php|e4199d01e962eaf0243734af613d0d5f
@@ -55,9 +55,9 @@
 /classes/models/LengowFeed.php|e113bec683031ef163c7098680e4c149
 /classes/models/index.php|a1bc811ddc842f715d4613ef27748bd8
 /classes/models/LengowToolboxElement.php|710c8c067b7ffdb23498fb9ea4ccce13
-/classes/models/LengowImport.php|b5a831b7054cee8caf19c7934e9289a7
+/classes/models/LengowImport.php|7381f9530a1af7f09a1502a2e3ea9c91
 /classes/models/LengowAction.php|1c24a2f74c94a68ea498eee3723c5774
-/classes/models/LengowOrder.php|4e2e62dc769e1c761a72b377d5fef4ef
+/classes/models/LengowOrder.php|11c3df5cc6b5bbf93f9cf9402d3c587a
 /classes/models/LengowFile.php|7eb988d7c5c7ef20c596a625e2cb7efe
 /classes/index.php|a1bc811ddc842f715d4613ef27748bd8
 /controllers/admin/AdminLengowMainSettingController.php|122aad99912350828281732c1a17e0eb
@@ -105,20 +105,20 @@
 /upgrade/update_3.0.1.php|4460215a5cf38d8f0e49d1761e9d23e9
 /upgrade/index.php|a1bc811ddc842f715d4613ef27748bd8
 /upgrade/update_3.0.0.php|cbdc983db60123666bc2a4d136f63705
-/views/js/select2.js|8a06e7cd9ae5f4d19db02d53ed76a650
+/views/js/jquery.1.12.4.min.js|4f252523d4af0b478c810c2547a63e19
+/views/js/select2.js|55803f63d27a37983d4f2a0d477e8dde
 /views/js/clipboard.js|55db0ff82a3b6b247844ae0d07d85fc6
 /views/js/bootstrap.min.js|7e888f425050743215e40539268412a6
 /views/js/index.php|be8b25f88c14bddd7711e4585ebae316
-/views/js/jquery.1.12.0.min.js|5fde0b11f36075108d7d441f3d8e18d0
 /views/js/lengow/order.js|5d4307f3e7049ae3fa4503341856297a
 /views/js/lengow/admin.js|4ecb45a16075d54875c48e4eaf82d639
-/views/js/lengow/main_setting.js|f2a6559470e63b3803f4c44eb29ed703
-/views/js/lengow/feed.js|980b82ddcf8f05acdcbc866ae542dc9b
+/views/js/lengow/main_setting.js|497e0f4e5d9432edb309c1f54ea74cf1
+/views/js/lengow/feed.js|81bc06f6cd4b8cf425bab9913cf6d17e
 /views/js/lengow/toolbox.js|42fdcf10dea819b0d59c730d6587cfc0
 /views/js/lengow/home.js|40c933cbe0e83f47ea2d7e84832a8762
-/views/js/lengow/order_setting.js|9070ad0fce258bab9e1d8021754a750d
+/views/js/lengow/order_setting.js|d44dc8c3ddb82999767594833de2348b
 /views/js/lengow/index.php|be8b25f88c14bddd7711e4585ebae316
-/views/js/bootstrap-datepicker.js|bb387ca4f3834722c298c37658086d12
+/views/js/bootstrap-datepicker.js|45e201fa37f8e7bff224a1f89a98ac11
 /views/img/bag.png|d812d529e1b5404cf7b92d4f36ab7abd
 /views/img/connection-module.png|edb3364c8b46d07cbaa7192944f01475
 /views/img/carret-down.png|f54e84c999caf3849f56fcf6537141bc
@@ -403,7 +403,7 @@
 /views/css/bootstrap-datepicker.css|d5260247b97663d887f4efe8ec894353
 /views/css/font-awesome.css|bf4b58c946c9234e4a6b9f7a70d38006
 /views/css/select2.css|8969ac4614d64a13dfc32e1eb4e731f7
-/views/css/lengow-pages.css|8cfdd0ba5aaafd543c1ab19cedbf12d3
+/views/css/lengow-pages.css|80ac60ff63f63a5d01215e9e9e774d04
 /views/css/lengow-layout.css|d9ed028bae726ef9891bcb6840782166
 /views/css/lengow-components.css|574f7d2e1e8d5871795687dd619cc48c
 /views/css/lengow-tab.css|79a142ebd63de0b3fce9c26f0fddf93f
@@ -468,7 +468,7 @@
 /views/templates/admin/lengow_main_setting/index.php|be8b25f88c14bddd7711e4585ebae316
 /views/templates/admin/order/info.tpl|f6cc8a0d58d5c50b6fd47c917190630d
 /views/templates/admin/order/index.php|be8b25f88c14bddd7711e4585ebae316
-/views/templates/admin/header.tpl|3711f5805799295ae700262bfc7ea0c5
+/views/templates/admin/header.tpl|d7fcc980f62b9ae823eedfceb3f70227
 /views/templates/admin/index.php|be8b25f88c14bddd7711e4585ebae316
 /views/templates/admin/header_order.tpl|452332339e744007db76a1c4e8ae5805
 /views/templates/admin/lengow_help/helpers/index.php|be8b25f88c14bddd7711e4585ebae316
