@@ -157,6 +157,7 @@ order.screen.status_waiting_shipment|Waiting for shipment
 order.screen.status_shipped|Shipped
 order.screen.status_closed|Closed
 order.screen.status_refunded|Refunded
+order.screen.status_partially_refunded|Partially Refunded
 order.screen.status_canceled|Canceled
 order.screen.type_express|Express delivery
 order.screen.type_delivered_by_marketplace|Shipped by Marketplace
