@@ -157,6 +157,7 @@ order.screen.status_waiting_shipment|En attente d'expédition
 order.screen.status_shipped|Expédié
 order.screen.status_closed|Fermé
 order.screen.status_refunded|Remboursé
+order.screen.status_partially_refunded|Partiellement Remboursé
 order.screen.status_canceled|Annulé
 order.screen.type_express|Livraison Express
 order.screen.type_delivered_by_marketplace|Expédié par la marketplace
