@@ -176,6 +176,7 @@ en:
       status_shipped: "Shipped"
       status_closed: "Closed"
       status_refunded: "Refunded"
+      status_partially_refunded: "Partially Refunded"
       status_canceled: "Canceled"
       type_express: "Express delivery"
       type_delivered_by_marketplace: "Shipped by Marketplace"
