@@ -2,6 +2,7 @@
 Version 3.4.6
 =============================================================
  - Feature : Switch env from config prod/preprod
+ - Feature : partial_refunded new state to accept
 =============================================================
 Version 3.4.5
 =============================================================
